@@ -58,3 +58,6 @@ class ServerCapabilitiesAcknowledged(time: LocalDateTime, val capabilities: Map<
 
 /** Raised when the server has finished sending us capabilities. */
 class ServerCapabilitiesFinished(time: LocalDateTime) : IrcEvent(time)
+
+/** Raised when a Message Of the Day has completed. */
+class MotdFinished(time: LocalDateTime, val missing: Boolean = false): IrcEvent(time)
